--- a/source/background.html
+++ b/source/background.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Background Page</title>
-  <script type="module" src="./localforage.js"></script>
+  <script type="module" src="./lib/localforage.js"></script>
+  <script type="module" src="./lib/functions.js"></script>
   <script type="module" src="./background.js"></script>
 </head>
 <body>
