re-factored to be configurable from the extension options. Uses localforage to store user preferences for the default app url.

--- a/source/pages/popup.html
+++ b/source/pages/popup.html
@@ -17,14 +17,13 @@
 </head>
 <body>
   <h3>Page captured:</h3>
-  <!-- <script type="module" src="/lib/functions.js"></script> -->
   <div id="saved-content"></div>
   <ul>
     <li><a href="/pages/queue.html" target="_blank">Queue of unsaved pages</a></li>
-    <!-- <li><a href="#">Extension settings</a></li> -->
     <li><a id="app-link" href="">Open 'Lil Patchy Saver' App</a></li>
   </ul>
-  <script src="/lib/localforage.js"></script>
+  <script src="../lib/localforage.js"></script>
+  <script src="../config.js"></script>
   <script type="module" src="popup.js"></script>
 </body>
 </html>
